# shop-asset

./: .env.example  .gitignore  LICENSE  README.md  index.html  mallbook-architecture.html  package-lock.json  package.json  supabase-schema.sql  vite.config.ts
.github/workflows/: release.yml
PRD/: 01_PRD.md  02_DATA_MODEL.md  03_PHASES.md  04_PROJECT_SPEC.md  README.md
scripts/: sync-version.js
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260414000001_init.sql  20260414000002_add_google_sheet.sql  20260414000003_products_and_commission.sql  20260415000004_add_telegram_bot.sql  20260415000005_goal_and_templates.sql  20260415000006_product_counterparty.sql  20260415000007_product_purchase_date.sql  20260415000008_product_pending_delivery.sql  20260415000009_counterparty_soft_delete.sql  20260415000010_product_soft_delete.sql  20260416000011_add_telegram_chat_id.sql
src-tauri/src/: google.rs  lib.rs  main.rs  telegram.rs
src/components/: UpdateBanner.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/ui/: button.tsx  (+9 more)
src/lib/: db.ts  google.ts  supabase.ts  tax.ts  utils.ts
src/pages/: CounterpartiesPage.tsx  DashboardPage.tsx  PnlPage.tsx  ProductsPage.tsx  SettingsPage.tsx  StatementPage.tsx  TaxReportPage.tsx  TransactionsPage.tsx
src/stores/: useCategoryStore.ts  useCounterpartyStore.ts  useProductStore.ts  useTransactionStore.ts
src/types/: index.ts
telegram-bot/: .env.example  bot.js  package-lock.json  package.json
